# realsense_parallel

./: LICENSE  README.md
realsense_parallel/: CMakeLists.txt  package.xml
realsense_parallel/include/realsense_parallel/: parallel.hpp
realsense_parallel/src/: parallel.cpp
